merubah margin buttom  menjadi 50px

--- a/latihan/CSS Latihan/Kevin Powell course/day 1/tips1.css
+++ b/latihan/CSS Latihan/Kevin Powell course/day 1/tips1.css
@@ -1,15 +1,14 @@
 div {
     padding: 3px;
+    margin: auto auto 50px;
 }
 
 .kotak1 {
     background-color: blueviolet;
-    margin: auto;
     width: 70%;
 }
 
 .kotak2 {
     background-color: aqua;
-    margin: auto;
     width: 500px;
 }
