--- a/latihan/CSS Latihan/Shandika Galih/latihan1.css
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.css
@@ -2,3 +2,31 @@
     margin: 0;
     padding: 0;
 }
+
+body {
+    background-color: darkgray;
+    font: 13px/28px arial, sans-serif;
+    color: #333;
+}
+
+.container {
+    background-color: white;
+    margin: auto;
+    width: 800px;
+}
+
+.header {
+    padding: 10px;
+}
+
+.header .judul {
+    font-size: 30px;
+    font-weight: bold;
+    padding-top: 10px;
+}
+
+.header ul li {
+    display: inline-block;
+    margin-top: 20px;
+    margin-right: 10px;
+}
