--- a/latihan/CSS Latihan/Shandika Galih/latihan1.css
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.css
@@ -53,4 +53,21 @@ a {
     border-bottom: 3px solid darkgray;
 }
 
-.content {}
+.content {
+    padding: 20px;
+}
+
+.content h2 {
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.content .penulis {
+    font-size: 10px;
+    margin-top: -5px;
+}
+
+.content p {
+    margin-bottom: 20px;
+    font-size: 15px;
+}
