--- a/latihan/CSS Latihan/Shandika Galih/latihan1.css
+++ b/latihan/CSS Latihan/Shandika Galih/latihan1.css
@@ -4,7 +4,7 @@
 }
 
 body {
-    background-color: darkgray;
+    background-image: url(gambar/email-pattern.png);
     font: 16px/28px arial, sans-serif;
     color: #333;
 }
@@ -55,6 +55,7 @@ a {
 
 .content {
     padding: 20px;
+    border-left: 10px solid salmon;
 }
 
 .content h2 {
@@ -70,4 +71,15 @@ a {
 .content p {
     margin-bottom: 20px;
     font-size: 15px;
+}
+
+.footer {
+    background-color: #333;
+}
+
+.footer .copy {
+    padding: 10px;
+    color: aliceblue;
+    text-align: center;
+    font-size: small;
 }
