--- a/latihan/CSS Latihan/Shandika Galih/latihan2.css
+++ b/latihan/CSS Latihan/Shandika Galih/latihan2.css
@@ -12,7 +12,7 @@ body {
 .container {
     background-color: white;
     margin: auto;
-    width: 800px;
+    width: 960px;
     box-sizing: border-box;
 }
 
@@ -53,24 +53,51 @@ a {
     border-bottom: 3px solid darkgray;
 }
 
-.content {
+.maincontent {
     padding: 20px;
+    width: 600px;
     border-left: 10px solid salmon;
+    box-sizing: border-box;
+    float: left;
 }
 
-.content h2 {
+.maincontent h2 {
     font-size: 28px;
     font-weight: bold;
 }
 
-.content .penulis {
+.maincontent .penulis {
     font-size: 10px;
     margin-top: -5px;
 }
 
-.content p {
+.maincontent p {
     margin-bottom: 20px;
     font-size: 15px;
+}
+
+.secondcontent {
+    width: 300px;
+    padding: 20px;
+    float: right;
+}
+
+.secondcontent h3 {
+    font-weight: bold;
+    color: #666;
+    box-sizing: border-box;
+
+}
+
+.secondcontent img {
+    float: left;
+    padding-right: 10px;
+
+
+}
+
+.secondcontent p {
+    font: 12px/18px arial;
 }
 
 .footer {
@@ -82,4 +109,24 @@ a {
     color: aliceblue;
     text-align: center;
     font-size: small;
+}
+
+.cf:before,
+.cf:after {
+    content: " ";
+    /* 1 */
+    display: table;
+    /* 2 */
+}
+
+.cf:after {
+    clear: both;
+}
+
+/**
+ * For IE 6/7 only
+ * Include this rule to trigger hasLayout and contain floats.
+ */
+.cf {
+    *zoom: 1;
 }
